--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <%- include('./layout/nav'); -%>
-    <section class="header">
+    <header class="header">
       <div class="container header-text">
         <div>
           <h3 class="fs-36">Promise-Desert 2020 早春系列</h3>
@@ -16,7 +16,7 @@
           <a href="#" class="fs-20">立即購買</a>
         </div>
       </div>
-    </section>
+    </header>
     <section class="profession py-80">
       <div class="container">
         <h2 class="mb-32 fs-48 fw-bold ta-c">用專業的心，做專業的事</h2>
@@ -284,8 +284,8 @@
         </form>
       </div>
     </section>
+ 
     <%- include('./layout/footer'); -%>
-
     <script type="module" src="../main.js"></script>
   </body>
 </html>
