--- a/pages/post.html
+++ b/pages/post.html
@@ -19,12 +19,12 @@
           <span class="material-icons icon fs-32"> search </span>
         </nav>
     </section>
-    <ul class="container tabs d-flex mt-24 mb-8">
+    <ol class="container tabs d-flex mt-24 mb-8">
         <li><a href="./index.html">首頁</a> /</li>
         <li><a href="./blog.html">&nbsp;部落格</a> /</li>
         <li><a href="#">&nbsp;特別企劃</a> /</li>
         <li><a href="#">&nbsp;情人特別企劃</a></li>
-    </ul>
+    </ol>
     <ul class="container hashtags d-flex mb-8">
         <li class="mr-15"><a href="#" class="fs-24 fw-bold">#special</a></li>
         <li><a href="#" class="fs-24 fw-bold">#event</a></li>
