--- a/post.html
+++ b/post.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>情人節企劃</title>
-    <script type="module" crossorigin src="/glasses/assets/main-e13fad34.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-2c88cad3.css">
+    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
   </head>
   <body>
     <section class="bg-red">
@@ -17,18 +17,11 @@
         <li><a href="./store.html" class="fs-20">門市據點</a></li>
         <li><a href="./blog.html" class="fs-20">部落格</a></li>
         <li><a href="./faq.html" class="fs-20">常見問題</a></li>
+  
       </ul>
     </nav>
   </section>
-
-
-
-
-
-<!-- <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a> -->    <section class="post-bg-dark">
+    <section class="post-bg-dark">
         <nav class="container blog-nav">
           <ul class="blog-menu d-flex">
             <li><a href="#" class="fs-20">最新消息</a></li>
@@ -39,12 +32,12 @@
           <span class="material-icons icon fs-32"> search </span>
         </nav>
     </section>
-    <ul class="container tabs d-flex mt-24 mb-8">
+    <ol class="container tabs d-flex mt-24 mb-8">
         <li><a href="./index.html">首頁</a> /</li>
         <li><a href="./blog.html">&nbsp;部落格</a> /</li>
         <li><a href="#">&nbsp;特別企劃</a> /</li>
         <li><a href="#">&nbsp;情人特別企劃</a></li>
-    </ul>
+    </ol>
     <ul class="container hashtags d-flex mb-8">
         <li class="mr-15"><a href="#" class="fs-24 fw-bold">#special</a></li>
         <li><a href="#" class="fs-24 fw-bold">#event</a></li>
@@ -140,8 +133,8 @@
           </div>
         </div>
     </main>
-    <section class="footer">
-    <footer class="container pt-60">
+    <footer class="footer pt-60">
+    <div class="container">
       <div class="top">
         <div class="left">
           <ul class="menu d-flex">
@@ -198,8 +191,8 @@
           <a href="#">服務條款</a>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
 
 
