--- a/store.html
+++ b/store.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>部落格</title>
-    <script type="module" crossorigin src="/glasses/assets/main-e13fad34.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-2c88cad3.css">
+    <title>門市據點</title>
+    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
   </head>
   <body>
     <section class="bg-red">
@@ -17,18 +17,11 @@
         <li><a href="./store.html" class="fs-20">門市據點</a></li>
         <li><a href="./blog.html" class="fs-20">部落格</a></li>
         <li><a href="./faq.html" class="fs-20">常見問題</a></li>
+  
       </ul>
     </nav>
   </section>
-
-
-
-
-
-<!-- <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a> -->    <div class="container">
+    <div class="container">
         <h2 class="title fs-48 fw-bold mt-96">
           <span class="block d-inline-block mr-16"></span>門市據點</h2>
     </div>
@@ -135,8 +128,8 @@
         </li>
     </ul>
     </section>
-    <section class="footer">
-    <footer class="container pt-60">
+    <footer class="footer pt-60">
+    <div class="container">
       <div class="top">
         <div class="left">
           <ul class="menu d-flex">
@@ -193,8 +186,8 @@
           <a href="#">服務條款</a>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
 
 
