--- a/sunglasses.html
+++ b/sunglasses.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sunglasses</title>
-    <script type="module" crossorigin src="/glasses/assets/main-e13fad34.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-2c88cad3.css">
+    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
   </head>
   <body>
     <section class="bg-red">
@@ -17,18 +17,11 @@
         <li><a href="./store.html" class="fs-20">門市據點</a></li>
         <li><a href="./blog.html" class="fs-20">部落格</a></li>
         <li><a href="./faq.html" class="fs-20">常見問題</a></li>
+  
       </ul>
     </nav>
   </section>
-
-
-
-
-
-<!-- <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a> -->    <ul class="sun-tabs container d-flex">
+    <ul class="sun-tabs container d-flex">
       <li>
         <a href="./optical.html" class="py-24 fw-bold fs-32 ta-c">OPTICAL</a>
       </li>
@@ -179,8 +172,8 @@
       <li><a href="#">5</a></li>
       <li><a href="#">下一頁</a></li>
     </ul>
-</section>    <section class="footer">
-    <footer class="container pt-60">
+</section>    <footer class="footer pt-60">
+    <div class="container">
       <div class="top">
         <div class="left">
           <ul class="menu d-flex">
@@ -237,8 +230,8 @@
           <a href="#">服務條款</a>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
 
 
