--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>部落格</title>
-    <script type="module" crossorigin src="/glasses/assets/main-e13fad34.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-2c88cad3.css">
+    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
   </head>
   <body>
     <section class="bg-red">
@@ -17,18 +17,11 @@
         <li><a href="./store.html" class="fs-20">門市據點</a></li>
         <li><a href="./blog.html" class="fs-20">部落格</a></li>
         <li><a href="./faq.html" class="fs-20">常見問題</a></li>
+  
       </ul>
     </nav>
   </section>
-
-
-
-
-
-<!-- <h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a> -->    <section class="blog-bg-dark">
+    <section class="blog-bg-dark">
       <nav class="container blog-nav">
         <ul class="blog-menu d-flex">
           <li><a href="#" class="fs-20">最新消息</a></li>
@@ -61,7 +54,7 @@
               一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
               即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻<span
                 >，只要從未來過本店的新朋友，綁定官方LINE好友，都可享專屬優惠⋯⋯</span
-              ><span>⋯⋯more</span>
+              ><a href="./post.html">⋯⋯more</a>
             </p>
             <a href="./post.html" class="fw-bold fs-36">MORE</a>
           </div>
@@ -83,7 +76,7 @@
               炎熱的夏季裡，衣著選擇經常希望以簡潔的風格為主，但有時單純只穿搭 T
               恤或短袖開襟襯衫，又覺得整體造型度有點不足嗎？那麼不妨可以透過「配件」，為穿搭點綴出與眾不同的視覺層次，而本季有哪些必備的配件系列呢？一起從以下推薦的
               3 款單品，讓你瞬間帥氣<span>爆棚散發型男品味⋯⋯</span
-              ><span>⋯⋯more</span>
+              ><a href="#">⋯⋯more</a>
             </p>
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
@@ -105,7 +98,7 @@
               一年一度西洋情人節即將到來，我們推出最強「情人節企劃」，為這個甜蜜的節日加溫。偶爾跟另一半來個低調情侶單品，結合彼此喜好、找出合適框型款式，在這個春夏輕鬆搭出屬於你們的甜蜜默契！
               即日起至2/16為止，不論是熱戀情侶、自由自在一個人或是老夫老妻<span
                 >，只要從未來過本店的新朋友，綁定官方LINE好友，都可享專屬優惠⋯⋯</span
-              ><span>⋯⋯more</span>
+              ><a href="#">⋯⋯more</a>
             </p>
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
@@ -127,7 +120,7 @@
               2020
               年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，<span
                 >俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</span
-              ><span>⋯⋯more</span>
+              ><a href="#">⋯⋯more</a>
             </p>
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
@@ -149,7 +142,7 @@
               2020
               年春季的光學眼鏡跳脫前幾季流行的復古框型，比起圓框與小方框等文青風格，偏向個性款式的眉框眼鏡成為這一季的耀眼之星。除了經典款式如黑色眉框落在長方形鏡面上，眉宇之間露出專業莊重的特殊氣質，包覆在圓形鏡框上的貓眼型眉框則是強調出特殊設計感，<span
                 >俐落時髦的造型搭配一件簡單的白襯衫就相當有型，是喜愛時尚質感人士絕不能錯過的必備款式⋯⋯</span
-              ><span>⋯⋯more</span>
+              ><a href="#">⋯⋯more</a>
             </p>
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
@@ -166,8 +159,8 @@
       <li><a href="#">5</a></li>
       <li><a href="#">下一頁</a></li>
     </ul>
-</section>    <section class="footer">
-    <footer class="container pt-60">
+</section>    <footer class="footer pt-60">
+    <div class="container">
       <div class="top">
         <div class="left">
           <ul class="menu d-flex">
@@ -224,8 +217,8 @@
           <a href="#">服務條款</a>
         </div>
       </div>
-    </footer>
-  </section>
+    </div>
+  </footer>
 
 
 
