--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>部落格</title>
   </head>
   <body>
@@ -46,7 +47,7 @@
             <a href="./post.html" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-2.png?raw=true"
@@ -68,7 +69,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-3.png?raw=true"
@@ -90,7 +91,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-4.png?raw=true"
@@ -112,7 +113,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-124 post">
+        <li class="mb-124 post"  data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-5.png?raw=true"
@@ -139,5 +140,11 @@
     <%- include('./layout/pagnition'); -%>
     <%- include('./layout/footer'); -%>
     <script type="module" src="../main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 300,
+      });
+    </script>
   </body>
 </html>
