--- a/pages/sunglasses.html
+++ b/pages/sunglasses.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Sunglasses</title>
   </head>
   <body>
@@ -51,7 +52,7 @@
       <h2 class="ta-c fs-42 fw-bold">2020 NEW COLLECTION</h2>
       <h2 class="ta-c fs-32 mb-32">賽璐珞鈦金屬混合鏡框</h2>
       <ul class="sun-cards">
-        <li class="mb-80">
+        <li class="mb-80" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-7.png?raw=true"
@@ -67,7 +68,7 @@
             ><button type="button" class="btn"></button>
           </div>
         </li>
-        <li class="mb-80">
+        <li class="mb-80" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-8.png?raw=true"
@@ -83,7 +84,7 @@
             ><button type="button" class="btn"></button>
           </div>
         </li>
-        <li class="mb-80">
+        <li class="mb-80" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-9.png?raw=true"
@@ -99,7 +100,7 @@
             ><button type="button" class="btn"></button>
           </div>
         </li>
-        <li>
+        <li data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-10.png?raw=true"
@@ -115,7 +116,7 @@
             ><button type="button" class="btn"></button>
           </div>
         </li>
-        <li>
+        <li data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-11.png?raw=true"
@@ -131,7 +132,7 @@
             ><button type="button" class="btn"></button>
           </div>
         </li>
-        <li>
+        <li data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-12.png?raw=true"
@@ -153,5 +154,11 @@
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 350,
+      });
+    </script>
   </body>
 </html>
