--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Glasses</title>
-    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
+    <script type="module" crossorigin src="/glasses/assets/main-9adf3652.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-f5bfbed5.css">
   </head>
   <body>
     <section class="bg-red">
@@ -30,7 +31,7 @@
         </div>
       </div>
     </header>
-    <section class="profession py-80">
+    <section class="profession py-80" data-aos="fade-up">
       <div class="container">
         <h2 class="mb-32 fs-48 fw-bold ta-c">用專業的心，做專業的事</h2>
         <ul class="values d-flex mx--12">
@@ -86,7 +87,7 @@
         </ul>
       </div>
     </section>
-    <section class="classic container">
+    <section class="classic container" data-aos="fade-up">
       <h2 class="fw-bold fs-48 mb-48 ta-c">經典系列鏡框</h2>
       <ul class="type d-flex mx--12">
         <li class="px-12">
@@ -127,7 +128,7 @@
         </li>
       </ul>
     </section>
-    <section class="cobranding py-80">
+    <section class="cobranding py-80" data-aos="fade-up">
       <div class="container">
         <h2 class="fw-bold fs-48 mb-48 ta-c">聯名設計鏡框</h2>
         <ul class="design d-flex">
@@ -170,9 +171,9 @@
         </ul>
       </div>
     </section>
-    <section class="testimonial container">
+    <section class="testimonial container" data-aos="fade-up">
       <h2 class="fs-48 fw-bold mb-48 ta-c">顧客推薦</h2>
-      <ul class="customer-cards d-flex">
+      <ul class="customer-cards d-flex" data-aos="fade-up">
         <li class="mr-24">
           <a href="#">
             <div class="img-container">
@@ -239,7 +240,7 @@
         </li>
       </ul>
     </section>
-    <section class="contact py-80">
+    <section class="contact py-80" data-aos="fade-up">
       <div class="container contact-details">
         <h2 class="fs-48 fw-bold mb-48 ta-c">聯絡我們</h2>
         <p class="mb-24 fs-20">
@@ -289,7 +290,7 @@
           >
           <button
             type="submit"
-            class="d-block mx-auto mt-48 btn"
+            class="d-block mx-auto mt-48 btn fs-18"
             id="contact-form"
           >
             確認送出
@@ -297,7 +298,7 @@
         </form>
       </div>
     </section>
- 
+
     <footer class="footer pt-60">
     <div class="container">
       <div class="top">
@@ -362,5 +363,11 @@
 
 
 <!-- <footer class="footer">我是 footer</footer> -->    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 270,
+      });
+    </script>
   </body>
 </html>
