--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>部落格</title>
-    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
+    <script type="module" crossorigin src="/glasses/assets/main-9adf3652.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-f5bfbed5.css">
   </head>
   <body>
     <section class="bg-red">
@@ -59,7 +60,7 @@
             <a href="./post.html" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-2.png?raw=true"
@@ -81,7 +82,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-3.png?raw=true"
@@ -103,7 +104,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-60 post">
+        <li class="mb-60 post" data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-4.png?raw=true"
@@ -125,7 +126,7 @@
             <a href="#" class="fw-bold fs-36">MORE</a>
           </div>
         </li>
-        <li class="mb-124 post">
+        <li class="mb-124 post"  data-aos="fade-up">
           <div class="img-container">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/blog-5.png?raw=true"
@@ -223,5 +224,11 @@
 
 
 <!-- <footer class="footer">我是 footer</footer> -->    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 300,
+      });
+    </script>
   </body>
 </html>
