--- a/optical.html
+++ b/optical.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Optical</title>
-    <script type="module" crossorigin src="/glasses/assets/main-c1ad9f0b.js"></script>
-    <link rel="stylesheet" href="/glasses/assets/main-3bd13aa4.css">
+    <script type="module" crossorigin src="/glasses/assets/main-9adf3652.js"></script>
+    <link rel="stylesheet" href="/glasses/assets/main-f5bfbed5.css">
   </head>
   <body>
     <section class="bg-red">
@@ -64,7 +65,7 @@
         <h2 class="ta-c fs-42 fw-bold">Celluloid Combi</h2>
         <h2 class="ta-c fs-32 mb-32">賽璐珞鈦金屬混合鏡框</h2>
         <ul class="opt-cards">
-          <li class="mb-80">
+          <li class="mb-80" data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-1.png?raw=true"
@@ -80,7 +81,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-2.png?raw=true"
@@ -96,7 +97,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-3.png?raw=true"
@@ -112,7 +113,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-4.png?raw=true"
@@ -128,7 +129,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-5.png?raw=true"
@@ -144,7 +145,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-6.png?raw=true"
@@ -160,7 +161,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-7.png?raw=true"
@@ -176,7 +177,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li class="mb-80">
+          <li class="mb-80"  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-8.png?raw=true"
@@ -192,7 +193,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li>
+          <li  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-9.png?raw=true"
@@ -208,7 +209,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li>
+          <li  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-10.png?raw=true"
@@ -224,7 +225,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li>
+          <li  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-11.png?raw=true"
@@ -240,7 +241,7 @@
               ><button type="button" class="btn"></button>
             </div>
           </li>
-          <li>
+          <li  data-aos="fade-up">
             <div class="img-container">
               <img
                 src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-12.png?raw=true"
@@ -333,5 +334,11 @@
 
 <!-- <footer class="footer">我是 footer</footer> -->
     
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 300,
+      });
+      </script>
   </body>
 </html>
